--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,11 @@
         android:theme="@style/Theme.KassandraFlutter"
         tools:targetApi="31">
         <activity
+            android:name=".ConditionsExampleActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoopsExampleActivity"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -26,7 +27,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
