--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,14 @@
         android:theme="@style/Theme.KassandraFlutter"
         tools:targetApi="31">
         <activity
+            android:name=".CalculatorActivity"
+            android:exported="false" />
+        <activity
             android:name=".ConditionsExampleActivity"
             android:exported="false" />
         <activity
             android:name=".LoopsExampleActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
